--- a/index.html
+++ b/index.html
@@ -3,36 +3,41 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ระบบเช็คชื่อพนักงาน</title>
+<title>ระบบเช็คชื่อเข้า-ออกงาน</title>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap');
 
-  body {
+  html, body {
     margin: 0;
     padding: 0;
     font-family: 'Kanit', sans-serif;
-    background-color: #ffffff; /* เปลี่ยนเป็นพื้นหลังขาว */
+    background-color: #fff; /* พื้นหลังขาว */
+    width: 100%;
+    height: 100%;
+    overflow: hidden; /* ป้องกันเลื่อน */
     display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   .card {
-    width: 100%;
-    height: 100vh; /* เต็มจอ mobile */
-    background-color: #ffffff;
+    flex: 1;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 20px;
     box-sizing: border-box;
-    overflow-y: auto;
+    width: 100%;
+    max-width: 500px;
+    margin: auto;
   }
 
   h2 {
     text-align: center;
     color: #06C755;
     font-weight: 700;
+    font-size: 1.5rem;
     margin-bottom: 20px;
   }
 
@@ -47,14 +52,10 @@
     padding: 15px;
     border-radius: 12px;
     border: 1px solid #ccc;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     cursor: pointer;
     background-color: #f9f9f9;
-    transition: 0.3s;
-  }
-
-  .dropdown-btn:hover {
-    background-color: #e0f4d9;
+    text-align: left;
   }
 
   .dropdown-content {
@@ -63,7 +64,7 @@
     top: 100%;
     left: 0;
     width: 100%;
-    max-height: 250px;
+    max-height: 200px;
     overflow-y: auto;
     background-color: #fff;
     border: 1px solid #ccc;
@@ -73,7 +74,7 @@
   }
 
   .dropdown-content div {
-    padding: 12px 15px;
+    padding: 12px 20px;
     cursor: pointer;
     transition: 0.2s;
   }
@@ -89,8 +90,8 @@
     border-radius: 12px;
     border: 1px solid #ccc;
     font-size: 1rem;
-    resize: vertical;
-    min-height: 100px;
+    resize: none;
+    height: 100px;
     margin-bottom: 15px;
   }
 
@@ -104,7 +105,7 @@
     font-size: 1.2rem;
     font-weight: 700;
     cursor: pointer;
-    transition: 0.3s;
+    margin-bottom: 10px;
   }
 
   .btn:hover {
@@ -115,12 +116,32 @@
     text-align: center;
     font-size: 1.2rem;
     font-weight: 700;
-    margin-top: 15px;
+    margin-bottom: 10px;
   }
 
   .success { color: green; }
   .error { color: red; }
 
+  footer {
+    width: 100%;
+    background-color: #f1f1f1;
+    padding: 12px 0;
+    font-size: 0.9rem;
+    color: #555;
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    text-align: center;
+  }
+
+  footer a {
+    color: #06C755;
+    text-decoration: none;
+  }
+
+  footer a:hover {
+    text-decoration: underline;
+  }
 </style>
 </head>
 <body>
@@ -137,6 +158,13 @@
   <button class="btn" onclick="checkInEmployee()">เช็คชื่อเข้า</button>
   <div id="result"></div>
 </div>
+
+<footer>
+  <a href="#">Log in with LINE Business ID</a>
+  <a href="#">About Business ID</a>
+  <a href="#">Help</a>
+  <a href="#">Terms of Use</a>
+</footer>
 
 <audio id="successSound" src="https://firebasestorage.googleapis.com/v0/b/sekkport.appspot.com/o/new-notification-015-363677.mp3?alt=media&token=74f2ee1e-021a-4306-9d18-fcbe5d06291b"></audio>
 <audio id="errorSound" src="https://www.soundjay.com/buttons/sounds/button-10.mp3"></audio>
