--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Kanit', sans-serif;
-    background-color: #fff; /* พื้นหลังขาว */
+    background-color: #fff;
     width: 100%;
     height: 100%;
     overflow: hidden; /* ป้องกันเลื่อน */
@@ -38,7 +38,20 @@
     color: #06C755;
     font-weight: 700;
     font-size: 1.5rem;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
+  }
+
+  .login-line {
+    width: 100%;
+    padding: 12px 15px;
+    margin-bottom: 15px;
+    border-radius: 12px;
+    border: 1px solid #ccc;
+    font-size: 1rem;
+    background-color: #f9f9f9;
+    text-align: center;
+    color: #06C755;
+    font-weight: 700;
   }
 
   .dropdown {
@@ -56,6 +69,7 @@
     cursor: pointer;
     background-color: #f9f9f9;
     text-align: left;
+    box-sizing: border-box;
   }
 
   .dropdown-content {
@@ -70,6 +84,7 @@
     border: 1px solid #ccc;
     border-radius: 12px;
     z-index: 100;
+    box-sizing: border-box;
     box-shadow: 0 5px 15px rgba(0,0,0,0.1);
   }
 
@@ -92,6 +107,7 @@
     font-size: 1rem;
     resize: none;
     height: 100px;
+    box-sizing: border-box;
     margin-bottom: 15px;
   }
 
@@ -149,6 +165,8 @@
 <div class="card">
   <h2>เช็คชื่อพนักงาน</h2>
 
+  <div class="login-line">Log in with LINE Business ID</div>
+
   <div class="dropdown">
     <div class="dropdown-btn" id="dropdownBtn">-- เลือกชื่อเจ้าหน้าที่ --</div>
     <div class="dropdown-content" id="employeeList"></div>
@@ -160,7 +178,6 @@
 </div>
 
 <footer>
-  <a href="#">Log in with LINE Business ID</a>
   <a href="#">About Business ID</a>
   <a href="#">Help</a>
   <a href="#">Terms of Use</a>
@@ -230,3 +247,4 @@
 </script>
 </body>
 </html>
+
