--- a/index.html
+++ b/index.html
@@ -3,61 +3,62 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ระบบเช็คชื่อเข้า-ออกงาน</title>
+<title>เช็คชื่อพนักงาน</title>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap');
 
-  html, body {
+  /* ===== Body ===== */
+  body {
     margin: 0;
     padding: 0;
     font-family: 'Kanit', sans-serif;
     background-color: #fff;
-    width: 100%;
-    height: 100%;
-    overflow: hidden; /* ป้องกันเลื่อน */
+    overflow: hidden; /* ไม่ให้เลื่อน */
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
-  .card {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 20px;
-    box-sizing: border-box;
+    min-height: 100vh;
+  }
+
+  /* ===== Card ===== */
+  .card {
     width: 100%;
     max-width: 500px;
-    margin: auto;
+    height: 100vh;
+    box-sizing: border-box;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 15px;
+    background-color: #fff;
   }
 
   h2 {
     text-align: center;
     color: #06C755;
     font-weight: 700;
-    font-size: 1.5rem;
-    margin-bottom: 15px;
+    margin-top: 0;
   }
 
+  /* ===== LINE Login ===== */
   .login-line {
     width: 100%;
-    padding: 12px 15px;
-    margin-bottom: 15px;
+    padding: 15px;
     border-radius: 12px;
     border: 1px solid #ccc;
     font-size: 1rem;
+    text-align: left;
     background-color: #f9f9f9;
-    text-align: center;
-    color: #06C755;
+    color: #000;
     font-weight: 700;
+    box-sizing: border-box;
   }
 
+  /* ===== Dropdown ===== */
   .dropdown {
     position: relative;
     width: 100%;
-    margin-bottom: 15px;
   }
 
   .dropdown-btn {
@@ -65,11 +66,14 @@
     padding: 15px;
     border-radius: 12px;
     border: 1px solid #ccc;
-    font-size: 1.2rem;
+    font-size: 1rem;
     cursor: pointer;
     background-color: #f9f9f9;
-    text-align: left;
     box-sizing: border-box;
+  }
+
+  .dropdown-btn:hover {
+    background-color: #e0f4d9;
   }
 
   .dropdown-content {
@@ -84,7 +88,6 @@
     border: 1px solid #ccc;
     border-radius: 12px;
     z-index: 100;
-    box-sizing: border-box;
     box-shadow: 0 5px 15px rgba(0,0,0,0.1);
   }
 
@@ -99,6 +102,7 @@
     color: #fff;
   }
 
+  /* ===== Textarea ===== */
   textarea {
     width: 100%;
     padding: 15px;
@@ -106,13 +110,12 @@
     border: 1px solid #ccc;
     font-size: 1rem;
     resize: none;
-    height: 100px;
     box-sizing: border-box;
-    margin-bottom: 15px;
+    height: 120px;
   }
 
+  /* ===== Button ===== */
   .btn {
-    width: 100%;
     padding: 15px;
     border-radius: 12px;
     border: none;
@@ -121,38 +124,38 @@
     font-size: 1.2rem;
     font-weight: 700;
     cursor: pointer;
-    margin-bottom: 10px;
+    transition: 0.3s;
   }
 
   .btn:hover {
     background-color: #049645;
   }
 
+  /* ===== Result ===== */
   #result {
     text-align: center;
     font-size: 1.2rem;
     font-weight: 700;
-    margin-bottom: 10px;
   }
 
   .success { color: green; }
   .error { color: red; }
 
+  /* ===== Footer ===== */
   footer {
-    width: 100%;
-    background-color: #f1f1f1;
-    padding: 12px 0;
-    font-size: 0.9rem;
-    color: #555;
+    margin-top: auto;
+    font-size: 0.85rem;
+    color: #666;
     display: flex;
-    justify-content: center;
-    gap: 15px;
+    flex-direction: column;
+    gap: 5px;
     text-align: center;
   }
 
   footer a {
     color: #06C755;
     text-decoration: none;
+    margin: 0 5px;
   }
 
   footer a:hover {
@@ -169,19 +172,23 @@
 
   <div class="dropdown">
     <div class="dropdown-btn" id="dropdownBtn">-- เลือกชื่อเจ้าหน้าที่ --</div>
-    <div class="dropdown-content" id="employeeList"></div>
+    <div class="dropdown-content" id="employeeList">
+      <!-- รายชื่อพนักงานจะใส่ script -->
+    </div>
   </div>
 
   <textarea id="note" placeholder="รายละเอียดเพิ่มเติม (ไม่บังคับ)"></textarea>
-  <button class="btn" onclick="checkInEmployee()">เช็คชื่อเข้า</button>
+  <button class="btn">เช็คชื่อเข้า</button>
   <div id="result"></div>
-</div>
 
-<footer>
-  <a href="#">About Business ID</a>
-  <a href="#">Help</a>
-  <a href="#">Terms of Use</a>
-</footer>
+  <footer>
+    <div>About Business ID</div>
+    <div>
+      <a href="#">Help</a> |
+      <a href="#">Terms of Use</a>
+    </div>
+  </footer>
+</div>
 
 <audio id="successSound" src="https://firebasestorage.googleapis.com/v0/b/sekkport.appspot.com/o/new-notification-015-363677.mp3?alt=media&token=74f2ee1e-021a-4306-9d18-fcbe5d06291b"></audio>
 <audio id="errorSound" src="https://www.soundjay.com/buttons/sounds/button-10.mp3"></audio>
@@ -247,4 +254,5 @@
 </script>
 </body>
 </html>
+
 
