--- a/index.html
+++ b/index.html
@@ -7,158 +7,159 @@
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap');
 
-  /* ===== Body ===== */
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Kanit', sans-serif;
-  background-color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  overflow: hidden;
+/* ===== Body ===== */
+body {                              /* กำหนดพื้นหลัง, font, จัดกลาง */
+  margin: 0;                         /* ลบ margin เริ่มต้น */
+  padding: 0;                        /* ลบ padding เริ่มต้น */
+  font-family: 'Kanit', sans-serif;  /* ใช้ฟอนต์ Kanit */
+  background-color: #fff;            /* พื้นหลังสีขาว */
+  display: flex;                     /* ใช้ flexbox */
+  justify-content: center;           /* จัด horizontal กึ่งกลาง */
+  align-items: center;               /* จัด vertical กึ่งกลาง */
+  min-height: 100vh;                 /* ความสูงเต็มจอ */
+  overflow: hidden;                  /* ป้องกัน scroll */
 }
 
 /* ===== Card ===== */
-.card {
-  width: 95%;
-  max-width: 500px;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  background-color: #fff;
-  border-radius: 20px;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-  box-sizing: border-box;
+.card {                             /* กล่องหลัก */
+  width: 95%;                        /* กว้าง 95% ของหน้าจอ */
+  max-width: 500px;                  /* สูงสุด 500px */
+  padding: 20px;                     /* ช่องว่างด้านใน */
+  display: flex;                     /* ใช้ flexbox */
+  flex-direction: column;            /* จัดเป็นแนวตั้ง */
+  gap: 15px;                         /* ช่องว่างระหว่าง element */
+  background-color: #fff;            /* พื้นหลังสีขาว */
+  border-radius: 20px;               /* มุมโค้ง */
+  box-shadow: 0 10px 30px rgba(0,0,0,0.1); /* เงา */
+  box-sizing: border-box;            /* รวม padding ใน width */
 }
 
 /* ===== Header ===== */
-h2 {
-  text-align: center;
-  color: #06C755;
-  font-weight: 700;
-  margin-top: 0;
+h2 {                                /* หัวเรื่อง */
+  text-align: center;                /* กึ่งกลาง */
+  color: #06C755;                    /* สีเขียว */
+  font-weight: 700;                  /* ตัวหนา */
+  margin-top: 0;                     /* ลบ margin บน */
 }
 
 /* ===== LINE Login ===== */
-.login-line {
-  font-weight: 700;
-  color: #000;
-  text-align: left;
-  padding-left: 0;
-  margin-bottom: 10px;
-  background: none; /* ไม่มีกรอบ */
-  border: none;
+.login-line {                        /* ข้อความ Log in with LINE Business ID */
+  font-weight: 700;                  /* ตัวหนา */
+  color: #000;                        /* สีดำ */
+  text-align: left;                  /* ชิดซ้าย */
+  padding-left: 0;                   /* ไม่มี padding ซ้าย */
+  margin-bottom: 10px;               /* ช่องว่างด้านล่าง */
+  background: none;                  /* ไม่มีพื้นหลัง */
+  border: none;                      /* ไม่มีกรอบ */
 }
 
 /* ===== Dropdown ===== */
-.dropdown {
-  position: relative;
-  width: 100%;
+.dropdown {                           /* กล่อง dropdown */
+  position: relative;                 /* สำหรับ dropdown-content */
+  width: 100%;                        /* เต็มความกว้าง card */
 }
 
-.dropdown-btn {
-  width: 100%;
-  padding: 15px;
-  border-radius: 12px;
-  border: 1px solid #ccc;
-  font-size: 1rem;
-  cursor: pointer;
-  background-color: #f9f9f9;
-  box-sizing: border-box;
+.dropdown-btn {                        /* ปุ่ม dropdown */
+  width: 100%;                         /* เต็มความกว้าง parent */
+  padding: 15px;                       /* ช่องว่างด้านใน */
+  border-radius: 12px;                 /* มุมโค้ง */
+  border: 1px solid #ccc;              /* เส้นกรอบ */
+  font-size: 1rem;                     /* ขนาดตัวอักษร */
+  cursor: pointer;                     /* เคอร์เซอร์ pointer */
+  background-color: #f9f9f9;          /* สีพื้นหลัง */
+  box-sizing: border-box;              /* รวม padding ใน width */
 }
 
-.dropdown-btn:hover {
-  background-color: #e0f4d9;
+.dropdown-btn:hover {                   /* hover ปุ่ม dropdown */
+  background-color: #e0f4d9;           /* สีเขียวอ่อน */
 }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  max-height: 200px;
-  overflow-y: auto;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 12px;
-  z-index: 100;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+.dropdown-content {                     /* รายการ dropdown */
+  display: none;                        /* ซ่อนเริ่มต้น */
+  position: absolute;                   /* absolute ใน parent */
+  top: 100%;                            /* อยู่ใต้ปุ่ม */
+  left: 0;                              /* ชิดซ้าย */
+  width: 100%;                          /* เต็มปุ่ม */
+  max-height: 200px;                    /* สูงสุด 200px */
+  overflow-y: auto;                     /* scroll vertical */
+  background-color: #fff;               /* พื้นหลังสีขาว */
+  border: 1px solid #ccc;               /* เส้นกรอบ */
+  border-radius: 12px;                  /* มุมโค้ง */
+  z-index: 100;                         /* อยู่เหนือ element อื่น */
+  box-shadow: 0 5px 15px rgba(0,0,0,0.1); /* เงา */
 }
 
-.dropdown-content div {
-  padding: 12px 20px;
-  cursor: pointer;
-  transition: 0.2s;
+.dropdown-content div {                  /* รายการแต่ละ item */
+  padding: 12px 20px;                   /* ช่องว่าง */
+  cursor: pointer;                      /* pointer */
+  transition: 0.2s;                     /* transition hover */
 }
 
-.dropdown-content div:hover {
-  background-color: #06C755;
-  color: #fff;
+.dropdown-content div:hover {            /* hover รายการ */
+  background-color: #06C755;            /* สีเขียว */
+  color: #fff;                          /* ตัวอักษรสีขาว */
 }
 
 /* ===== Textarea ===== */
-textarea {
-  width: 100%;
-  padding: 15px;
-  border-radius: 12px;
-  border: 1px solid #ccc;
-  font-size: 1rem;
-  resize: none;
-  height: 120px;
-  box-sizing: border-box;
+textarea {                              /* ช่องหมายเหตุ */
+  width: 100%;                           /* เต็มความกว้าง card */
+  padding: 15px;                         /* ช่องว่างด้านใน */
+  border-radius: 12px;                   /* มุมโค้ง */
+  border: 1px solid #ccc;                /* เส้นกรอบ */
+  font-size: 1rem;                       /* ขนาดตัวอักษร */
+  resize: none;                          /* ปิด resize */
+  height: 120px;                          /* สูง 120px */
+  box-sizing: border-box;                 /* รวม padding ใน width */
 }
 
 /* ===== Button ===== */
-.btn {
-  padding: 15px;
-  border-radius: 12px;
-  border: none;
-  background-color: #06C755;
-  color: #fff;
-  font-size: 1.2rem;
-  font-weight: 700;
-  cursor: pointer;
-  transition: 0.3s;
+.btn {                                   /* ปุ่มเช็คชื่อ */
+  padding: 15px;                          /* ช่องว่าง */
+  border-radius: 12px;                     /* มุมโค้ง */
+  border: none;                            /* ไม่มีกรอบ */
+  background-color: #06C755;              /* สีเขียว */
+  color: #fff;                             /* ตัวอักษรสีขาว */
+  font-size: 1.2rem;                       /* ตัวอักษรใหญ่ */
+  font-weight: 700;                        /* ตัวหนา */
+  cursor: pointer;                         /* pointer */
+  transition: 0.3s;                        /* transition hover */
 }
 
-.btn:hover {
-  background-color: #049645;
+.btn:hover {                              /* hover ปุ่ม */
+  background-color: #049645;              /* สีเขียวเข้ม */
 }
 
 /* ===== Result ===== */
-#result {
-  text-align: center;
-  font-size: 1.2rem;
-  font-weight: 700;
+#result {                                 /* แสดงผลหลังเช็คชื่อ */
+  text-align: center;                     /* กึ่งกลาง */
+  font-size: 1.2rem;                      /* ตัวอักษรใหญ่ */
+  font-weight: 700;                        /* ตัวหนา */
 }
 
-.success { color: green; }
-.error { color: red; }
+.success { color: green; }                /* ข้อความสำเร็จสีเขียว */
+.error { color: red; }                    /* ข้อความผิดพลาดสีแดง */
 
 /* ===== Footer ===== */
-footer {
-  margin-top: auto;
-  font-size: 0.85rem;
-  color: #666;
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-  text-align: center;
+footer {                                  /* Footer */
+  margin-top: auto;                        /* ดันลงล่าง */
+  font-size: 0.85rem;                      /* ตัวอักษรเล็ก */
+  color: #666;                             /* สีเทาอ่อน */
+  display: flex;                            /* ใช้ flex */
+  flex-direction: column;                  /* แนวตั้ง */
+  gap: 5px;                                /* ช่องว่าง */
+  text-align: center;                       /* กึ่งกลาง */
 }
 
-footer a {
-  color: #06C755;
-  text-decoration: none;
-  margin: 0 5px;
+footer a {                                 /* ลิงก์ footer */
+  color: #06C755;                           /* สีเขียว */
+  text-decoration: none;                     /* ไม่มีเส้นใต้ */
+  margin: 0 5px;                             /* ช่องว่างซ้ายขวา */
 }
 
-footer a:hover {
-  text-decoration: underline;
+footer a:hover {                           /* hover ลิงก์ footer */
+  text-decoration: underline;              /* มีเส้นใต้ */
 }
+
 
 </style>
 </head>
@@ -253,6 +254,7 @@ footer a:hover {
 </script>
 </body>
 </html>
+
 
 
 
